--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -9,3 +9,7 @@
 .btn-primary {
     @apply bg-blue-600 text-white py-2 px-4 rounded-lg shadow-lg hover:bg-blue-700;
 }
+
+.btn-secondary {
+    @apply bg-gray-600 text-white py-1 px-4 rounded-lg hover:bg-gray-700;
+}
