--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -13,3 +13,7 @@
 .btn-secondary {
     @apply bg-gray-600 text-white py-1 px-4 rounded-lg hover:bg-gray-700;
 }
+
+.btn-danger {
+    @apply bg-red-600 text-white py-1 px-2 rounded-lg hover:bg-red-700;
+}
