--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -17,3 +17,8 @@
 .btn-danger {
     @apply bg-red-600 text-white py-1 px-2 rounded-lg hover:bg-red-700;
 }
+
+.active-link {
+    font-weight: bold;
+    text-decoration: underline;
+}
